--- a/_config.yml
+++ b/_config.yml
@@ -8,20 +8,20 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'Griffith Lab'
+title: 'Bicomputing Group'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
 slogan: ''
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'This is the website for the academic lab of Malachi and Obi Griffith'
+description: 'This is the website for the research lab of Dr. Heewook Lee- Bicomputing Group at ASU'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
 credits: '<p>Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on the theme <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
 
 # Main author of the website
 # See > authors.yml
-author: Obi Griffith, Malachi Griffith
+author: Piyussh Singhal
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
@@ -115,7 +115,7 @@ defaults:
       show_meta: false 	# Hide metadata for all pages
       # sidebar:    		# Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: Griffith     # Default author for pages
+      author: Piyussh     # Default author for pages
   -
     scope:
       path: ''
@@ -124,7 +124,7 @@ defaults:
       show_meta: true   # Show metadata for all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: Griffith     # Default author for posts
+      author: Piyussh     # Default author for posts
 
 
 
