--- a/_config.yml
+++ b/_config.yml
@@ -25,13 +25,13 @@ author: Piyussh Singhal
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://griffithlab.org'
+url: 'https://lee-cbg.github.io'
 #baseurl: '/vicc', this breaks github pages for some reason, investigate, ZL
 
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
-improve_content: https://github.com/griffithlab/griffithlab.github.io/edit/master/
+improve_content: https://lee-cbg.github.io/
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash at the end.
@@ -39,7 +39,7 @@ improve_content: https://github.com/griffithlab/griffithlab.github.io/edit/maste
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'http://griffithlab.org/images/'
+urlimg: 'https://lee-cbg.github.io/images/'
 
 
 # Logo size is 600x80 pixels
