--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,5 +1,5 @@
 - name: GitHub
-  url: https://github.com/griffithlab/griffithlab.github.io
+  url: https://github.com/Lee-CBG/Lee-CBG.github.io
   class: fa-brands fa-github
   title: Github repo for site.
 
