--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'Bicomputing Group'
+title: 'Biocomputing Group'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
 slogan: ''
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'This is the website for the research lab of Dr. Heewook Lee- Bicomputing Group at ASU'
+description: 'This is the website for the research lab of Dr. Heewook Lee- Biocomputing Group at ASU'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
 credits: '<p>Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on the theme <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
